<resources>
    <string name="app_name">PPRZServiceClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="wp_button">Request WP</string>
    <string name="block_button">Request Blocks</string>

    <string name="service_connection">service_connection:</string>

    <string name="altitude">altitude:</string>
    <string name="target_altitude">target_altitude:</string>

    <string name="climb_speed">climb_speed:</string>
    <string name="ground_speed">ground_speed</string>
    <string name="air_speed">vertical_speed:</string>
    <string name="target_speed">target_speed</string>

    <string name="roll">roll:</string>
    <string name="pitch">pitch:</string>
    <string name="yaw">yaw:</string>

    <string name="batt_volt">batt_volt:</string>
    <string name="batt_remain">batt_remain:</string>
    <string name="batt_current">batt_current:</string>

    <string name="waypoint_count">WP count:</string>
    <string name="block_count">block count:</string>
</resources>
