<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clientlib.MainActivity" >

    <!-- Altitude -->
    
    <TextView
        android:id="@+id/altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/altitude" />

    <TextView
        android:id="@+id/target_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/altitude"
        android:layout_below="@+id/altitude"
        android:text="@string/target_altitude" />
    
    <!-- speed -->
    
    <TextView
        android:id="@+id/climb_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/target_altitude"
        android:layout_below="@+id/target_altitude"
        android:text="@string/climb_speed" />

    <TextView
        android:id="@+id/ground_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/climb_speed"
        android:layout_below="@+id/climb_speed"
        android:text="@string/ground_speed" />
    
    <TextView
        android:id="@+id/air_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ground_speed"
        android:layout_below="@+id/ground_speed"
        android:text="@string/air_speed" />

    <TextView
        android:id="@+id/target_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/air_speed"
        android:layout_below="@+id/air_speed"
        android:text="@string/target_speed" />

    <!-- Attitude -->
    
    <TextView
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/target_speed"
        android:layout_below="@+id/target_speed"
        android:text="@string/roll" />
    
    <TextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roll"
        android:layout_below="@+id/roll"
        android:text="@string/pitch" />

    <TextView
        android:id="@+id/yaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pitch"
        android:layout_below="@+id/pitch"
        android:text="@string/yaw" />
    
    <!-- Battery -->
    
    <TextView
        android:id="@+id/batt_volt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yaw"
        android:layout_below="@+id/yaw"
        android:text="@string/batt_volt" />
    
    <TextView
        android:id="@+id/batt_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/batt_volt"
        android:layout_below="@+id/batt_volt"
        android:text="@string/batt_remain" />

    <TextView
        android:id="@+id/batt_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/batt_remain"
        android:layout_below="@+id/batt_remain"
        android:text="@string/batt_current" />
    
    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:onClick="onButtonRequest"
        android:text="@string/connect_button" />
    
</RelativeLayout>
